--- a/week-3/day2/index.css
+++ b/week-3/day2/index.css
@@ -1,86 +1,162 @@
 *{
-    margin:0%;
-    padding:0%
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
+/* HERO CONTAINER */
 .container{
     height: 100vh;
     width: 100%;
     background-image: url(https://images.pexels.com/photos/33315262/pexels-photo-33315262.jpeg);
     background-size: cover;
+    background-position: center;
     display: flex;
     flex-direction: column;
-  
-    
 }
+
+/* NAVBAR */
 .navbar{
     width: 100%;
-    height: 8%;
+    height: 70px;
     background: #27253d;
     color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
-}   
+    padding: 0 100px;
+    position: sticky;
+    top: 0;
+}
 
 .navbar .logo{
-    margin-left: 100px;
-    font-weight:bolder;
-    font-size: 25px;
+    font-size: 26px;
+    font-weight: bold;
 }
 
 .navbar .links{
-    margin-right: 100px;
     display: flex;
     gap: 30px;
-    
 }
-a{
+
+.navbar .links a{
     text-decoration: none;
     color: gray;
     font-size: 18px;
     font-weight: 700;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    
+    transition: 0.3s;
 }
+
+.navbar .links a:hover{
+    color: white;
+}
+
+/* HERO SECTION */
 .outer{
     flex: 1;
     display: flex;
     justify-content: center;
     align-items: center;
-    
 }
+
 .hero{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-
+    text-align: center;
 }
 
-h1 {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size:70px;
+.hero h1{
+    font-size: 70px;
     color: white;
 }
-p {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size:30px;
+
+.hero p{
+    font-size: 30px;
     color: white;
+    margin-top: 10px;
 }
-button{
+
+.hero button{
+    margin-top: 20px;
+    padding: 12px 35px;
+    border: none;
     border-radius: 5px;
     background-color: rgb(55, 55, 218);
     color: white;
-    margin: 10px;
-    padding: 10px 30px;
-    border: 0;
-    font-size: 15px;
+    font-size: 16px;
+    cursor: pointer;
+    transition: 0.3s;
 }
 
-    
-    
-   
+.hero button:hover{
+    background-color: rgb(35, 35, 180);
+}
 
-    
-    
+/* DESTINATION SECTION */
+.destination{
+    width: 100%;
+    padding: 60px 0;
+    background-color: #f8f9fa;
+    text-align: center;
+}
+
+.destination h5{
+    font-size: 40px;
+    font-weight: 500;
+    margin-bottom: 30px;
+}
+
+/* CARDS */
+.cards{
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+.card{
+    width: 380px;
+    height: 300px;
+    background: white;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+    transition: 0.3s;
+}
+
+
+
+.card img{
+    width: 100%;
+    height: 220px;
+    object-fit: cover;
+}
+
+.card .content{
+    padding: 10px 20px;
+}
+
+.card h6{
+    font-size: 22px;
+    font-weight: 400;
+}
+
+.card p{
+    font-size: 16px;
+    color: #555;
+    margin-top: 5px;
+}
+
+/* ABOUT SECTION */
+.about{
+    height: 400px;
+    width: 100%;
+    background-color: #27253d;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.about .texts p{
+    color: white;
+    font-size: 40px;
+    font-weight: 500;
+}
