--- a/week-3/day2/index.css
+++ b/week-3/day2/index.css
@@ -244,7 +244,7 @@
     
 }
 .package .priceCard .pcard1:hover{
-    border: 1px solid blue;
+    border: 1px solid rgb(34, 34, 183);
 }
 .package .priceCard .pcard1 .content{
     padding: 30px;
@@ -284,12 +284,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    
-     box-shadow: 10px 8px 25px rgba(128, 128, 128, 0.11)
+    box-shadow: 10px 8px 25px rgba(128, 128, 128, 0.11)
 
 }
 .testimonial .testcard .first:hover{
-    border: 1px solid blue;
+    border: 1px solid rgb(70, 70, 180);
 }
 .testimonial .testcard .first .inner{
     padding: 20px;
